--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,17 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+
+    <!-- services -->
+    <script src="js/services/bairros.js"></script>
+    <script src="js/services/util.js"></script>
+    <script src="js/services/db.js"></script>
+    <script src="js/services/vereadores.js"></script>
+    <script src="js/services/url.js"></script>
+    <script src="js/services/url.js"></script>
+    <script src="js/services/mock_helper.js"></script>
+    <script src="js/services/filtros.js"></script>
+    
   </head>
 
   <body ng-app="starter">
