--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
     <script src="js/services/url.js"></script>
     <script src="js/services/mock_helper.js"></script>
     <script src="js/services/filtros.js"></script>
+    <script src="js/services/materiais.js"></script>
     
   </head>
 
