--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
     <script src="js/services/mock_helper.js"></script>
     <script src="js/services/filtros.js"></script>
     <script src="js/services/materiais.js"></script>
+    <script src="js/services/html_helper.js"></script>
     
   </head>
 
