--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     -->
 
     <!-- ionic/angularjs js -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -44,7 +45,7 @@
     <script src="js/services/filtros.js"></script>
     <script src="js/services/materiais.js"></script>
     <script src="js/services/html_helper.js"></script>
-    
+    <script src="js/services/map.js"></script>
   </head>
 
   <body ng-app="starter">
